# req2veri

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_initial.py  20260422_0002_verification_test_precondition_action.py  20260423_0003_updated_by_audit_fields.py  20260423_0004_entity_history.py  20260427_0005_test_run_unique_per_version_test.py  20260427_0006_test_run_information_field.py  20260427_0007_verification_test_title_unique.py  20260427_0008_test_run_reported_by.py  20260427_0009_requirement_approved_audit.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  security.py
backend/app/api/routes/: admin.py  auth.py  (+6 more)
backend/app/models/: __init__.py  entity_history.py  enums.py  requirement.py  sub_requirement.py  test_object_version.py  test_run.py  user.py  verification_test.py
backend/app/repositories/: requirement_repo.py  sub_requirement_repo.py  verification_test_repo.py  version_repo.py
backend/app/schemas/: auth.py  dashboard.py  history.py  requirement.py  sub_requirement.py  verification_test.py  versioning.py
backend/app/services/: approval_metadata.py  dashboard_service.py  database_backup.py  history_service.py  requirement_service.py  sub_requirement_service.py  verification_test_service.py
backend/scripts/: __init__.py  entrypoint.sh  seed.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_endpoint_coverage.py  test_requirements_api.py
(+115 files in other folders)
